[package]
name = "x11-dl"
version = "2.18.5"
authors = [
    "daggerbot <daggerbot@gmail.com>",
    "Erle Pereira <erle@erlepereira.com>",
]
description = "X11 library bindings for Rust"
license = "MIT"
repository = "https://github.com/erlepereira/x11-rs.git"
build = "build.rs"
documentation = "https://docs.rs/x11-dl"
workspace = ".."

[dependencies]
lazy_static = "1"
libc = "0.2"
maybe-uninit = "2.0.0"

[build-dependencies]
pkg-config = "0.3.8"
