[package]
name = "x11"
version = "2.18.2"
authors = [
    "daggerbot <daggerbot@gmail.com>",
    "Erle Pereira <erle@erlepereira.com>",
]
description = "X11 library bindings for Rust"
license = "MIT"
repository = "https://github.com/erlepereira/x11-rs.git"
build = "build.rs"
documentation = "https://docs.rs/x11"
workspace = ".."

[features]
dpms = []
glx = []
xcursor = []
xf86vmode = []
xft = []
xinerama = []
xinput = []
xlib = []
xlib_xcb = []
xmu = []
xrandr = []
xrecord = ["xtst"]
xrender = []
xss = []
xt = []
xtest = ["xtst"]
xtst = []
dox = []

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.8"
