[package]
name = "x11"
version = "2.21.0"
authors = [
    "daggerbot <daggerbot@gmail.com>",
    "Erle Pereira <erle@erlepereira.com>",
    "AltF02 <contact@altf2.dev>",
]
description = "X11 library bindings for Rust"
license = "MIT"
repository = "https://github.com/AltF02/x11-rs.git"
build = "build.rs"
documentation = "https://docs.rs/x11"
workspace = ".."
edition = "2021"

[features]
all = ["dpms", 
        "glx", 
        "xcursor", 
        "xf86vmode", 
        "xfixes",
        "xft", 
        "xinerama", 
        "xinput", 
        "xlib", 
        "xlib_xcb", 
        "xmu", 
        "xrandr", 
        "xrecord",
        "xrender", 
        "xss", 
        "xt", 
        "xtest", 
        "xtst", 
        "dox"]
dpms = []
glx = []
xcursor = []
xf86vmode = []
xfixes = []
xft = []
xinerama = []
xinput = []
xlib = []
xlib_xcb = []
xmu = []
xrandr = []
xrecord = ["xtst"]
xrender = []
xss = []
xt = []
xtest = ["xtst"]
xtst = []
dox = []

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.24"
